2004-11-15  Leonard den Ottolander  <leonard * den ottolander nl>

	* file.c: Code cleanup (mostly indentation).

2004-11-12  Pavel Shirshov  <me@pavelsh.pp.ru>

	* user.c (expand_format): Return % with followed character if it
	without special meaning.

2004-11-11  Roland Illig  <roland.illig@gmx.de>

	* popthelp.c (showHelpIntro): The basename of argv[0] starts after
	the last slash in argv[0], not after the first.

	From Egmont Koblinger <egmont * uhulinux hu>

2004-11-10  Roland Illig  <roland.illig@gmx.de>

	* Makefile.am: Excluded pipethough.{c,h} from the distribution
	as they are currently unused.

2004-11-10  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* hotlist.c (unlink_entry): Add missed brackets.
	(add_new_entry_cmd): Fix memory leaks and double free()s.
	(add2hotlist_cmd): Eliminate static label_string.
	* regex.c: Define HAVE_WCTYPE_H to 0 if not defined to fix compilation.

2004-11-09  Pavel Shirshov  <me@pavelsh.pp.ru>

	* util.c (strip_password): Fix bug - don't delete path from url.

2004-11-09  Jindrich Novy  <jnovy@redhat.com>

	* filegui.c (file_mask_dialog): Fix memory leak.
	* hotlist.c (add_new_entry_cmd): Filter out a possible password
	dialogs.
	(add2hotlist_cmd): Likewise.

2004-11-07  Leonard den Ottolander <leonard * den ottolander nl>

	* slint.c (slang_init): Allow upto 512 lines and cols if the
	SLang library can handle it.

2004-11-07  Roland Illig  <roland.illig@gmx.de>

	* key.c (use_8th_bit_as_meta): Use 8bit input as default.

	From Vladimir Nadvornik <nadvornik * suse cz>

2004-11-04  Mike Gorchak  <mike@malva.ua>

	* dir.c (file_type_to_num): Added initial support for the Special Named
	Files. They are displayed as block devices, but with '#' prefix in it's
	names. Needed on QNX Neutrino.
	* file.c (copy_file_file): Likewise.
	* fs.h: Likewise.
	* screen.c (string_file_type): Likewise.
	(file_compute_color): Likewise.
	* util.c (string_perm): Likewise.

	* pipethrough.c: Added sys/select.h if found according to config.h.
